<resources>
    <string name="app_name">Alpaca Live</string>
    <string name="version">Version: %1$s</string>
    <string name="default_ip">192.168.0.137</string>
    <string name="start_player">Start player</string>
    <string name="stop_player">Stop player</string>
    <string name="yourendpoint">yourendpoint</string>
    <string name="room_name_promt">Please give a name to the room :</string>
    <string name="username">Username :</string>
    <string name="user_email">User Email :</string>
    <string name="user_password">Password :</string>

    <string name="default_rtsp">Default RTSP</string>
    <string name="from_file_rtsp">From file RTSP</string>

    <string name="tv_select">Select your streamer</string>
    <string name="hint_rtsp">rtsp://yourendpoint</string>
    <string name="start_button">Start stream</string>
    <string name="stop_button">Stop stream</string>
    <string name="switch_camera_button">Switch camera</string>
    <string name="select_file">Select file</string>
    <string name="start_record">Start record</string>
    <string name="stop_record">Stop record</string>
    <string name="resync_file">ReSync file</string>
    <!--menu-->
    <string name="microphone">Microphone</string>
    <string name="filters">Filters</string>
    <string name="clear">Clear</string>
    <string name="grey_scale">Grey scale</string>
    <string name="negative">Negative</string>
    <string name="sepia">Sepia</string>
    <string name="aqua">Aqua</string>
    <string name="posterize">Posterize</string>
    <!--gl menu-->
    <string name="enable_disable_fxaa">enable/disable FXAA</string>
    <!--filters-->
    <string name="no_filter">No filter</string>
    <string name="analog_tv">Analog TV</string>
    <string name="android_view">Android view</string>
    <string name="basic_deformation">Basic deformation</string>
    <string name="beauty">Beauty</string>
    <string name="black">Black</string>
    <string name="blur">Blur</string>
    <string name="brightness">Brightness</string>
    <string name="cartoon">Cartoon</string>
    <string name="circle">Circle</string>
    <string name="color">Color</string>
    <string name="contrast">Contrast</string>
    <string name="duotone">Duotone</string>
    <string name="earlybird">EarlyBird</string>
    <string name="edge_detection">Edge detection</string>
    <string name="exposure">Exposure</string>
    <string name="fire">Fire</string>
    <string name="gamma">Gamma</string>
    <string name="glitch">Glitch</string>
    <string name="gif">Gif</string>
    <string name="halftone_lines">Halftone lines</string>
    <string name="image">Image</string>
    <string name="image_70s">Image 70s</string>
    <string name="lamoish">Lamoish</string>
    <string name="money">Money</string>
    <string name="pixelated">Pixelated</string>
    <string name="polygonization">Polygonization</string>
    <string name="rgb_saturate">RGB saturate</string>
    <string name="ripple">Ripple</string>
    <string name="rotation">Rotation</string>
    <string name="saturation">Saturation</string>
    <string name="surface_filter">Surface filter</string>
    <string name="rainbow">Rainbow</string>
    <string name="sharpness">Sharpness</string>
    <string name="snow">Snow</string>
    <string name="swirl">Swirl</string>
    <string name="temperature">Temperature</string>
    <string name="text">Text</string>
    <string name="zebra">Zebra</string>
    <!--drawer-->
    <string name="drawer_title">Options</string>
    <string name="protocols">Protocol</string>
    <string name="tcp">TCP</string>
    <string name="udp">UDP</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="resolution">Resolution</string>
    <string name="video_bitrate">Bitrate (on fly)</string>
    <string name="audio_bitrate">Bitrate</string>
    <string name="fps">FPS</string>
    <string name="orientation">Orientation</string>
    <string name="hardware_rotation">Hardware rotation</string>
    <string name="samplerate">SampleRate</string>
    <string name="channel">Channel</string>
    <string name="stereo">Stereo</string>
    <string name="mono">Mono</string>
    <string name="echo_canceler">Echo canceler</string>
    <string name="camera">Camera</string>
    <string name="wowza_auth">Wowza Auth</string>
    <string name="wowza_user">User</string>
    <string name="wowza_password">Password</string>
    <string name="noise_suppressor">Noise suppressor</string>

    <string name="title_activity_live_listing">LiveListing</string>

    <!--Alpaca Live String-->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="termCondition">By signing up, you agree with our Terms and Conditions</string>
    <string name="title_activity_event_listing">Event Listing</string>
    <string name="title_activity_add_event">Add Event</string>
    <string name="event_name">Event Name :</string>
    <string name="event_location">Event Location :</string>
    <string name="event_start">Start Date :</string>
    <string name="event_end">End Date :</string>
    <string name="event_details">Event Details :</string>
    <string name="confirm">OK</string>
</resources>
