<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_example_rtmp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
  <SurfaceView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:id="@+id/surfaceView"
      />

  <EditText
      android:textColor="@color/appColor"
      android:textColorHint="@color/appColor"
      android:inputType="textUri"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_margin="20dp"
      android:id="@+id/et_rtp_url"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:layout_alignParentBottom="true"
      android:layout_margin="20dp"
      android:gravity="center"
      >

    <Button
        android:id="@+id/b_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:background="@drawable/gradient_background"
        android:text="@string/start_record" />

    <Button
        android:id="@+id/b_start_stop"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/login_button"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/switch_camera"
        android:layout_width="135dp"
        android:layout_height="37dp"
        android:background="@drawable/signup_button"
        android:text="@string/switch_camera_button" />
  </LinearLayout>
</RelativeLayout>
