<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/tarc_logo"
        android:layout_width="144dp"
        android:layout_height="62dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="133dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="134dp"
        android:background="@drawable/ic_tarc_logo" />

    <EditText
        android:id="@+id/txt_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/text_box_transparent"
        android:drawableStart="@drawable/ic_locker"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="false" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="53dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="58dp"
        android:background="@drawable/signup_button"
        android:clickable="true"
        android:onClick="SignUpUser"
        android:text="@string/sign_up"
        android:textColor="@color/colorWhite" />

    <ImageView
        android:id="@+id/alpacaLive_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tarc_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="116dp"
        android:background="@drawable/alpacalive" />

    <ImageView
        android:id="@+id/welcome_logo"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_below="@+id/alpacaLive_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="78dp"
        android:background="@drawable/welcome" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_pwd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/login_button"
        android:clickable="true"
        android:onClick="goToEventList"
        android:text="@string/login"
        android:textColor="@color/colorWhite" />

    <TextView
        android:id="@+id/txt_TNC"
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_sign_up"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="28dp"
        android:text="@string/termCondition" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome_logo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="55dp"
        android:background="@drawable/text_box_transparent"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="10sp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

</RelativeLayout>