<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".AddEvent">

    <TextView
        style="@style/add_event_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEventName"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="15dp"
        android:text="@string/event_name"
        android:textAppearance="@style/add_event_label" />

    <EditText
        android:id="@+id/txtEventName"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:layout_above="@+id/lblLocation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblLocation"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEventLocation"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/amiko"
        android:text="@string/event_location"
        android:textAppearance="@style/add_event_label"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/txtEventLocation"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:layout_above="@+id/lblStart"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lblStart"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtStartDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="15dp"
        android:text="@string/event_start"
        android:textAppearance="@style/add_event_label" />

    <TextView
        android:id="@+id/txtStartDate"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:layout_above="@+id/lblEnd"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:textAppearance="@style/add_event_label"
        android:focusable="true"
        android:focusableInTouchMode="true"
        style ="@android:style/Widget.EditText"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_above="@+id/lblEnd"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_calendar"
        android:inputType="none" />

    <TextView
        android:id="@+id/lblEnd"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtEndDate"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="15dp"
        android:text="@string/event_end"
        android:textAppearance="@style/add_event_label"
        tools:text="@string/event_end" />

    <TextView
        android:id="@+id/txtEndDate"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:layout_above="@+id/lblDetails"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="none"
        android:textAppearance="@style/add_event_label"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/btnEnd"
        android:layout_width="34dp"
        android:layout_height="28dp"
        android:layout_above="@+id/lblDetails"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/ic_calendar"
        android:inputType="none" />

    <TextView
        android:id="@+id/lblDetails"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtDetails"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="15dp"
        android:text="@string/event_details"
        android:textAppearance="@style/add_event_label" />

    <EditText
        android:id="@+id/txtDetails"
        android:layout_width="301dp"
        android:layout_height="34dp"
        android:layout_above="@+id/btnConfirm"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="40dp"
        android:background="@color/colorWhite"
        android:ems="10"
        android:inputType="none" />


    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="214dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="54dp"
        android:background="@drawable/login_button"
        android:onClick="addEventtoDB"
        android:text="@android:string/ok"
        android:textSize="20sp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="122dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="45dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/button_corner"
        android:text="@android:string/cancel" />


</RelativeLayout>